--- a/02_DOMACI/D_02_ITJS15013.css
+++ b/02_DOMACI/D_02_ITJS15013.css
@@ -8,20 +8,16 @@ h2 {
 }
 
 img {
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-    border:dashed orange;
+    border:double orange;
 }
 
 .paragraf {
     color:rgb(212, 145, 19);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; font-size: smaller;
-
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; font-size: 20px;
 }
+
 p {
     color:rgb(43, 43, 139);
-
 }
 
 a {
