--- a/projekat1/style.css
+++ b/projekat1/style.css
@@ -1,17 +1,20 @@
 body{
-    background-image: url(pozadina.jpg);
+    background-image: url(slike/pozadina.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left: 20px;
 }
-input{
-    size: 100px;
+
+.ljub,h2,h1{
+    color:purple
 }
 
-h2{
-    color:purple
+#Izracunaj, #Resetuj{
+    border-color: purple;
+    border-radius: 10px;
+    padding: 10px;
 }
-.ljub{
-    color:purple
+h1{
+    text-align: center;
 }
